Details
-
Bug
-
Resolution: Fixed
-
P1: Critical
-
6.5.2, dev
-
None
-
-
603fb28 (dev), 51f31ec (6.6), d4b60cc (6.5)
Description
Using `Component.onCompleted` within `Binding` causes segmentation fault.
Binding { Component.onCompleted: { } }
I tried to correct this with https://codereview.qt-project.org/c/qt/qtdeclarative/+/496421. If it is not correctly done, feel free to fix the problem with another way.
Attachments
For Gerrit Dashboard: QTBUG-116049 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
496616,6 | QQmlBind: handle top-level attached properties | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 |
498201,2 | QQmlBind: handle top-level attached properties | 6.6 | qt/qtdeclarative | Status: MERGED | +2 | 0 |
498203,2 | QQmlBind: handle top-level attached properties | 6.5 | qt/qtdeclarative | Status: MERGED | +2 | 0 |