QQmlBind: handle top-level attached properties

While top-level attached properties are formally deferred in QQmlBind,
QQmlBind is not really interested in them. Top-level attached properties
cannot be generalized grouped properties, after all. Therefore, populate
the attached objects the usual way when encountering them.

Fixes: QTBUG-116049
Change-Id: I18e8759ea52fd91fadf80b2cc69b5054f7cea23a
Reviewed-by: Sami Shalayel <sami.shalayel@qt.io>
Reviewed-by: Ulf Hermann <ulf.hermann@qt.io>
Reviewed-by: Semih Yavuz <semih.yavuz@qt.io>
(cherry picked from commit 603fb28d1d1500752782d5d138c262fccb50f0f9)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>